<resources>
    <string name="app_name">MUDining</string>
    <string name="restaurant_name_placeholder">Restaurant Name</string>
    <string name="restaurant_description_placeholder">Restaurant Description</string>
    <string name="food_types">Food Types</string>
    <string name="category_types">Categories</string>
    <string name="set_location_text">Set Location</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to determine your current location on the map.</string>
    <string name="location_permission_denied">This application requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Untitled.apk\'.</string>
    <string name="permission_required_toast">Location permission is required for this application.</string>
    <string name="google_maps_key" translatable="false">AIzaSyBeW6-wSErFw_G-9Yvw2GEA52-NTjl4bp8</string>

    <string name="save_restaurant_text">Save</string>
    <string name="change_restaurant_image_text">Change</string>
    <string name="recommend_button_text">Recommend</string>

    <!-- Navigation -->
    <string name="nav_recommend">Recommend</string>
    <string name="nav_search">Search</string>
    <string name="nav_restaurants">Restaurants</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_contact">Contact Us</string>

    <!-- Dialog -->
    <string name="confirm_text">Confirm</string>
    <string name="clear_text">Clear</string>
    <string name="filter_text">Filter</string>
    <string name="delete_confirmation_text">Delete Confirmation</string>

    <string name="food_type_text">Food Types</string>
    <string name="categories_text">Categories</string>
    <string name="location_from_here_text">Location from here</string>
</resources>
