<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/nav_restaurants" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_preferences" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/nav_contact" />
    </group>
</menu>